lcm